# project1_Nosov_Maksim_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: main.py
